# typing-databases

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.build  Dockerfile.read_cache  README.md  build.py  build.sh  download_schemes.py  pyproject.toml  requirements-build.txt  requirements-common.txt  requirements-prod.txt  requirements.txt  scheme_cleaner.py  schemes.json  template_secrets.json
.github/workflows/: push-main-to-public.yml
cgmlst_schemes/cogs_spneumoniae/.bin/: download  genes.txt
cgmlst_schemes/enterobase_Escherichia.cgMLSTv1/.bin/: download  genes.txt
cgmlst_schemes/enterobase_Salmonella.cgMLSTv2/.bin/: download  genes.txt
cgmlst_schemes/pasteur_klebsiella_18/.bin/: download
cgmlst_schemes/pasteur_listeria_3/.bin/: download  genes.txt
cgmlst_schemes/pubmlst_abaumannii_3/.bin/: download  genes.txt
cgmlst_schemes/pubmlst_bpseudomallei_2/.bin/: download  genes.txt
cgmlst_schemes/pubmlst_campylobacter_4/.bin/: download  genes.txt
cgmlst_schemes/pubmlst_neisseria_47/.bin/: download  genes.txt
cgmlst_schemes/pubmlst_neisseria_62/.bin/: genes.txt
cgmlst_schemes/pubmlst_saureus_2/.bin/: download  genes.txt
cgmlst_schemes/pubmlst_vcholerae_3/.bin/: download  genes.txt
cgmlst_schemes/ridom_abaumannii_3956907/.bin/: download  genes.txt
cgmlst_schemes/ridom_cdifficile_3560802/.bin/: download  genes.txt
config/: host_config.json  schemes.json
downloaders/: downloaders.py  normalise_alleles.py
mlst_schemes/bcc/.bin/: download  (+1 more)
src/download_schemes/: __init__.py  download_schemes.py  downloaders.py  keycache.py  normalise_alleles.py
(+284 files in other folders)
